--- a/src/containers/Layout/ContentLayout/ContentLayout.scss
+++ b/src/containers/Layout/ContentLayout/ContentLayout.scss
@@ -3,6 +3,7 @@
 .ContentLayout{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     height: 100vh;
     width: 100vw;
