--- a/src/containers/Sections/AboutMe/AboutMe.scss
+++ b/src/containers/Sections/AboutMe/AboutMe.scss
@@ -6,7 +6,9 @@
         display: flex;
         text-align: center;
         flex-direction: column;
-
+        .Swipe{
+            display: none;
+        }
         .imageCol{
             flex-direction: column;
             padding-right: 20px;
@@ -70,6 +72,15 @@
     @media (max-width: 767px){
         .AboutMe {
             padding: 3vw;
+            .Swipe{
+                display: flex;
+                position: absolute;
+                top:0;
+                right: 0;
+                width: 40vw;
+                height: 100%;
+                z-index: 1;
+            }
             h1{
                 font-size: $fontlarge;
             }
