--- a/src/containers/Sections/Contact/Contact.scss
+++ b/src/containers/Sections/Contact/Contact.scss
@@ -1,6 +1,8 @@
 @import '../../../sass/variables.scss';
 .Contact{
-    
+    .Swipe{
+        display: none;
+    }
     h1{
         text-align: center;
     }
@@ -92,6 +94,15 @@
         margin: 0;
         h1{
             font-size: $fontlarge;
+        }
+        .Swipe{
+            display: flex;
+            position: absolute;
+            top:0;
+            left: 0;
+            width: 40vw;
+            height: 100%;
+            z-index: 1;
         }
     }
     .contactForm{
