--- a/src/containers/Sections/Navigation/Navigation.scss
+++ b/src/containers/Sections/Navigation/Navigation.scss
@@ -10,7 +10,6 @@
     align-items: center;
     height: 100vh;
     min-height: 600px;
-    overflow: hidden;
 
     .Particles{
         position: absolute;
