--- a/src/containers/Sections/Skills/Skills.scss
+++ b/src/containers/Sections/Skills/Skills.scss
@@ -28,7 +28,7 @@
     }
 }
 @media (max-width: 767px){
-    .Skills{
+    .SkillsMeShow .Skills{
         flex-direction: column;
         overflow-y: scroll;
         h1,h2{
